fixed layout bug
- added bootstrap package

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -13,7 +13,6 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
     background: rgb(255, 143, 88);
     background: linear-gradient(
         140deg,
